--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -23,9 +23,8 @@ services:
   frontend:
     image: zinvas/foodgram_frontend
     env_file: .env
-    command: cp -r /app/build/. /static/
     volumes:
-      - static:/static
+      - static_frontend:/static_frontend/
     depends_on:
       - backend
   nginx:
@@ -36,6 +35,7 @@ services:
     volumes:
       - static:/static/
       - media:/app/media/
+      - static_frontend:/static_frontend/
     depends_on:
       - backend
       - frontend
