--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,6 +7,11 @@ server {
     alias /static_django/;
   }
 
+  location /static/admin/ {
+    proxy_set_header Host $http_host;
+    alias /static_django/;
+  }
+
   location /media/ {
     proxy_set_header Host $http_host;
     alias /media/;
