--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,14 +2,9 @@ server {
   listen 80;
   server_tokens off;
 
-  location /static/django/ {
+  location /static/ {
     proxy_set_header Host $http_host;
-    alias /static_django/;
-  }
-
-  location /static/admin/ {
-    proxy_set_header Host $http_host;
-    alias /static_django/;
+    alias /django/static_django/;
   }
 
   location /media/ {
