--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,9 +2,9 @@ server {
   listen 80;
   server_tokens off;
 
-  location /static/ {
+  location /static/django/ {
     proxy_set_header Host $http_host;
-    alias /django/static_django/;
+    alias /static_django/;
   }
 
   location /media/ {
