--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -124,4 +124,4 @@ jobs:
           sudo docker compose -f docker-compose.production.yml exec backend python manage.py makemigrations
           sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
           sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
-          sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/static/. /static/static/
+          sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/static_django/. /static_django/
