--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -3,44 +3,35 @@ version: '3'
 volumes:
   pg_data:
   static:
+  static_frontend:
   media:
 
 services:
   foodgram_db:
-    image: postgres:13.10
+    image: postgres:13
     env_file: .env
     volumes:
       - pg_data:/var/lib/postgresql/data
-    restart: always
-
   backend:
     image: zinvas/foodgram_backend
     env_file: .env
     volumes:
-      - static:/static/
+      - static:/app/static_django/
       - media:/app/media/
     depends_on:
       - foodgram_db
-    restart: on-failure
-
   frontend:
     image: zinvas/foodgram_frontend
-    env_file: .env
-    command: cp -r /app/build/. /static/
     volumes:
-      - static:/static
-    depends_on:
-      - backend
-    restart: no
-
-  gateway:
+      - static_frontend:/app/result_build/
+  nginx:
     image: zinvas/foodgram_gateway
     env_file: .env
     ports:
-      - 9000:80
+      - 5000:80
     volumes:
-      - static:/static
-      - media:/media
+      - static:/static_django/
+      - media:/media/
+      - static_frontend:/static_frontend/
     depends_on:
       - backend
-    restart: always
