--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,11 +7,9 @@ server {
     alias /static_django/;
   }
 
-  location /static/admin/ {
-    proxy_set_header Host $http_host;
-    alias /static_django/;
+  location /static/ {
+    alias /static_django/static/;
   }
-
   location /media/ {
     proxy_set_header Host $http_host;
     alias /media/;
